--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -37,7 +37,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "id": "1e860dcd-3caa-428a-aa00-fcff6b6f0d36",
       "metadata": {
         "id": "1e860dcd-3caa-428a-aa00-fcff6b6f0d36"
@@ -59,7 +59,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "id": "ed816853-392a-4059-8e7f-3ea9e00ee9e6",
       "metadata": {
         "id": "ed816853-392a-4059-8e7f-3ea9e00ee9e6"
@@ -115,7 +115,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "id": "888dc2e8-f944-4ae8-aee2-fe4d7f8fa82b",
       "metadata": {
         "colab": {
@@ -399,7 +399,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "id": "39a2900a-9d51-4fee-9f11-9becb414832e",
       "metadata": {
         "colab": {
@@ -462,7 +462,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "id": "82170d7c-a91c-46d4-a965-7de53d99a973",
       "metadata": {
         "colab": {
@@ -510,31 +510,30 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 43,
       "id": "26ec792d-757e-4653-b04b-cff55c8053d1",
       "metadata": {
+        "id": "26ec792d-757e-4653-b04b-cff55c8053d1",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "26ec792d-757e-4653-b04b-cff55c8053d1",
-        "outputId": "7d9de38e-3a0e-417f-ae0e-20ae812a2fbf"
+        "outputId": "11994e19-1b9f-447b-b06b-e41625940664"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
-            "Enter your favorite single-digit number.8\n",
-            "<re.Match object; span=(22, 23), match='8'>\n"
+            "Enter your favorite single-digit number.3\n"
           ]
         }
       ],
       "source": [
         "#si-favorite\n",
-        "fav_digit = input(\"Enter your favorite single-digit number.\")\n",
-        "input_string = str(\"My favorite number is \" + fav_digit)\n",
+        "input_string = input(\"Enter your favorite single-digit number.\")\n",
+        "fav_digit = str(\"My favorite number is \" + fav_digit)\n",
         "\n",
-        "hasNumber = re.search(r\"\\d\", input_string)"
+        "hasNumber = re.search(r\"\\d\", fav_digit)"
       ]
     },
     {
@@ -987,7 +986,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": 46,
       "id": "06c70a5f-c5b5-4e86-b438-cb711f55c8d1",
       "metadata": {
         "id": "06c70a5f-c5b5-4e86-b438-cb711f55c8d1"
@@ -999,7 +998,7 @@
         "\n",
         "def dateCheck(string):\n",
         "  if len(string)==10:\n",
-        "    date_search = re.search(\"\\d{2}-\\d{2}-\\d{4}\", string) #Store the search for DD-MM-YYYY\n",
+        "    date_search = re.search(r\"(0[1-9]|1[0-2])-(0[1-9]|1\\d|2\\d|3[0-1])-\\d{4}\", string) #Store the search for DD-MM-YYYY\n",
         "    if bool(date_search)==True:\n",
         "      return True\n",
         "    else:\n",
@@ -1011,27 +1010,27 @@
     {
       "cell_type": "code",
       "source": [
-        "dateCheck(\"09-01-199e\")"
+        "dateCheck(\"-199e\")"
       ],
       "metadata": {
+        "id": "Z0h8YGLgZK02",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "Z0h8YGLgZK02",
-        "outputId": "52ae2ca1-5f01-4dfa-f544-983a18561cd2"
+        "outputId": "a2f92549-ce3b-4240-b77e-ca14a6852369"
       },
       "id": "Z0h8YGLgZK02",
-      "execution_count": 42,
+      "execution_count": 44,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "False"
             ]
           },
+          "execution_count": 44,
           "metadata": {},
-          "execution_count": 42
+          "output_type": "execute_result"
         }
       ]
     },
@@ -1053,15 +1052,32 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 47,
       "id": "75cf2c42-4f50-420a-9898-fa22f4293fa4",
       "metadata": {
         "id": "75cf2c42-4f50-420a-9898-fa22f4293fa4"
       },
       "outputs": [],
       "source": [
-        "#si-email-check"
+        "#si-email-check\n",
+        "import re\n",
+        "\n",
+        "def emailCheck(possible_email):\n",
+        "  if bool(re.search(r\"[[a-z][A-Z][0-9].]+@[\\w]+[.](com|org|edu)\", possible_email))==True:\n",
+        "    return True\n",
+        "  else:\n",
+        "    return False"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "7nsij5HreFeo"
+      },
+      "id": "7nsij5HreFeo",
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
