--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -510,30 +510,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 43,
+      "execution_count": 48,
       "id": "26ec792d-757e-4653-b04b-cff55c8053d1",
       "metadata": {
-        "id": "26ec792d-757e-4653-b04b-cff55c8053d1",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "11994e19-1b9f-447b-b06b-e41625940664"
+        "id": "26ec792d-757e-4653-b04b-cff55c8053d1"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Enter your favorite single-digit number.3\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "#si-favorite\n",
-        "input_string = input(\"Enter your favorite single-digit number.\")\n",
-        "fav_digit = str(\"My favorite number is \" + fav_digit)\n",
+        "import re\n",
+        "input_string = \"My favorite number is 12.\"\n",
         "\n",
-        "hasNumber = re.search(r\"\\d\", fav_digit)"
+        "hasNumber = re.search(r\"\\d{1}\", input_string)"
       ]
     },
     {
