Sub 5: Updated and Tested Functions

--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -510,7 +510,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 48,
+      "execution_count": 55,
       "id": "26ec792d-757e-4653-b04b-cff55c8053d1",
       "metadata": {
         "id": "26ec792d-757e-4653-b04b-cff55c8053d1"
@@ -521,7 +521,34 @@
         "import re\n",
         "input_string = \"My favorite number is 12.\"\n",
         "\n",
-        "hasNumber = re.search(r\"\\d{1}\", input_string)"
+        "hasNumber = re.search(r\"[ ]\\d{1}.$\", input_string)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "bool(hasNumber)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "FbjpcXOWrW9Z",
+        "outputId": "638385e7-7948-4657-e865-41f0d4c44fbb"
+      },
+      "id": "FbjpcXOWrW9Z",
+      "execution_count": 56,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 56
+        }
       ]
     },
     {
@@ -974,7 +1001,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 46,
+      "execution_count": 1,
       "id": "06c70a5f-c5b5-4e86-b438-cb711f55c8d1",
       "metadata": {
         "id": "06c70a5f-c5b5-4e86-b438-cb711f55c8d1"
@@ -986,7 +1013,7 @@
         "\n",
         "def dateCheck(string):\n",
         "  if len(string)==10:\n",
-        "    date_search = re.search(r\"(0[1-9]|1[0-2])-(0[1-9]|1\\d|2\\d|3[0-1])-\\d{4}\", string) #Store the search for DD-MM-YYYY\n",
+        "    date_search = re.search(r\"(0[1-9]|1\\d|2\\d|3[0-1])-(0[1-9]|1[0-2])-\\d{4}\", string) #Store the search for DD-MM-YYYY\n",
         "    if bool(date_search)==True:\n",
         "      return True\n",
         "    else:\n",
@@ -998,27 +1025,27 @@
     {
       "cell_type": "code",
       "source": [
-        "dateCheck(\"-199e\")"
+        "dateCheck(\"13-01-2018\")"
       ],
       "metadata": {
         "id": "Z0h8YGLgZK02",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "a2f92549-ce3b-4240-b77e-ca14a6852369"
+        "outputId": "8ea15cfe-94e3-451c-8a09-1824f335220e"
       },
       "id": "Z0h8YGLgZK02",
-      "execution_count": 44,
+      "execution_count": 2,
       "outputs": [
         {
+          "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "False"
+              "True"
             ]
           },
-          "execution_count": 44,
           "metadata": {},
-          "output_type": "execute_result"
+          "execution_count": 2
         }
       ]
     },
@@ -1040,7 +1067,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 47,
+      "execution_count": 33,
       "id": "75cf2c42-4f50-420a-9898-fa22f4293fa4",
       "metadata": {
         "id": "75cf2c42-4f50-420a-9898-fa22f4293fa4"
@@ -1051,7 +1078,8 @@
         "import re\n",
         "\n",
         "def emailCheck(possible_email):\n",
-        "  if bool(re.search(r\"[[a-z][A-Z][0-9].]+@[\\w]+[.](com|org|edu)\", possible_email))==True:\n",
+        "  tf = bool(re.search(r\"^([a-z]|[A-Z]|\\d|[.])+@([a-z]|[A-Z]|\\d)+[.](com|org|edu)\", possible_email)) #[[a-z][A-Z][0-9].]+@[\\w\\d]+ \\\\\\ ^([a-z]|[A-Z]|\\d|[.])+\n",
+        "  if tf==True:\n",
         "    return True\n",
         "  else:\n",
         "    return False"
@@ -1059,13 +1087,192 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "emailCheck(\"stumptruck@gmail.com\")"
+      ],
       "metadata": {
-        "id": "7nsij5HreFeo"
+        "id": "7nsij5HreFeo",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "73b4a2e9-4b30-428c-b6d2-a758db1853aa"
       },
       "id": "7nsij5HreFeo",
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 34
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "emailCheck(\"7tumptruck@wsu.edu\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "qQbRVxzInksS",
+        "outputId": "d9c6f0dd-2617-4691-be78-fbd11aba5193"
+      },
+      "id": "qQbRVxzInksS",
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 35
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "emailCheck(\"stumptruck@happy2.org\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "7ILVemqvnv1N",
+        "outputId": "b277a3f2-74d2-49a9-f812-e4792af5c749"
+      },
+      "id": "7ILVemqvnv1N",
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 36
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "emailCheck(\"stump_truck@gmail.com\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "hbPNr1XIn18V",
+        "outputId": "37f8b6c7-ab50-47e1-e05c-849c458f757c"
+      },
+      "id": "hbPNr1XIn18V",
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 37
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "emailCheck(\"7tumptruck@aalto.fi\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "B510vpK-n72F",
+        "outputId": "e9cc28c0-9e65-4fc5-ff47-cb9eb68a6c08"
+      },
+      "id": "B510vpK-n72F",
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 38
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "emailCheck(\"stumptruckhappy2.org\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "z4iwVMUhn9vn",
+        "outputId": "fd41e4f9-5802-4e70-fb41-f069556067ac"
+      },
+      "id": "z4iwVMUhn9vn",
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 39
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "emailCheck(\"stumptruck@happy2org\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "QoLuXkB3n_6d",
+        "outputId": "a9790b09-e16d-4e0f-a74f-2c585735d20d"
+      },
+      "id": "QoLuXkB3n_6d",
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 40
+        }
+      ]
     }
   ],
   "metadata": {
